Field caps api  - report back if fields are single-valued or not. Inspects index contents in some cases to reveal if all docs hold single values or not for a field.
Relates to #58523